# ebpf-with-aya

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  _config.yml  index.html
_docs/: 00-outline.md  01-prerequisites.md  02-lab-setup.md  03-observability-stack.md  04-rust-aya-toolchain.md  05-ebpf-concepts.md  06-hello-world.md  07-kprobe-unlink.md  08-fentry-unlink.md  09-opensnoop.md  10-sigsnoop.md  11-execsnoop.md  12-exitsnoop.md  13-bashreadline.md  14-uprobe-rust.md  15-btf-uprobe.md  16-container-targets.md  17-sslsniff.md  18-funclatency.md  19-goroutine-states.md  20-javagc.md  21-runqlat.md  22-hardirqs.md  23-profile.md  24-memleak.md  25-biopattern.md  26-energy.md  27-tcpconnlat.md  28-tcpstates.md  29-http-l7.md  30-sockops.md  31-tc-classify.md  32-xdp-drop.md  33-xdp-capture.md  34-xdp-lb.md  35-xdp-test.md  36-tcx.md  37-lsm-confine.md  38-signal-kill.md  39-pidhide.md  (+30 more)
_includes/: excalidraw.html  header.html
_layouts/: tutorial.html
_parts/: addenda.md  advanced-kernel-surface.md  application-targets.md  field-guide.md  foundations.md  networking.md  operating-ebpf.md  performance-resources.md  retrospective.md  schedulers-sched-ext.md  security-lsm.md  tracing-the-kernel.md  user-space-language-probing.md
_plans/: iteration-plan.md  prd-reconciliation.md  reconciliation-plan.md  todo.md
assets/css/: site.css
assets/diagrams/: README.md  bcc-tools-map.excalidraw  bcc-tools.excalidraw  bio-seq-random.excalidraw  book-arc.excalidraw  bpf-architecture.excalidraw  bpf-arena.excalidraw  bpf-iter.excalidraw  bpf-lifecycle.excalidraw  bpf-timer.excalidraw  bpf-token.excalidraw  bpftool-python.excalidraw  bpftrace-python.excalidraw  bpftrace-tools-map.excalidraw  capstone.excalidraw  container-observe.excalidraw  core.excalidraw  dynptr.excalidraw  ebpf-lifecycle.excalidraw  ebpf-runtime-loop.excalidraw  energy-attribution.excalidraw  entry-exit.excalidraw  fentry-fexit-flow.excalidraw  generate.py  go-vs-c-abi.excalidraw  goroutine-states.excalidraw  he-observability.excalidraw  jvm-observable.excalidraw  kfuncs.excalidraw  l7-socketfilter.excalidraw  lab-topology.excalidraw  linux-events-bpf.excalidraw  lsm-decide.excalidraw  lsm-file-protect.excalidraw  mem-read-user-kernel.excalidraw  memleak-tracking.excalidraw  net-hooks.excalidraw  nginx-uprobe.excalidraw  obi-arch.excalidraw  obs-data-path.excalidraw  (+36 more)
examples/03-observability-stack/: README.md  compose.yaml  demo.sh
examples/06-hello-world/: Cargo.toml  README.md  demo.sh  rust-toolchain.toml
examples/06-hello-world/hello/: Cargo.toml  build.rs
examples/06-hello-world/hello-common/: Cargo.toml
examples/06-hello-world/hello-common/src/: lib.rs
examples/06-hello-world/hello-ebpf/: Cargo.toml
examples/06-hello-world/hello-ebpf/src/: main.rs
examples/06-hello-world/hello/src/: main.rs
examples/07-kprobe-unlink/: Cargo.toml  README.md  demo.sh
examples/07-kprobe-unlink/unlinksnoop/: Cargo.toml  build.rs
examples/07-kprobe-unlink/unlinksnoop-common/: Cargo.toml
examples/07-kprobe-unlink/unlinksnoop-common/src/: lib.rs
examples/07-kprobe-unlink/unlinksnoop-ebpf/: Cargo.toml
examples/07-kprobe-unlink/unlinksnoop-ebpf/src/: main.rs
examples/07-kprobe-unlink/unlinksnoop/src/: main.rs
examples/08-fentry-unlink/: Cargo.toml  README.md  demo.sh
examples/08-fentry-unlink/fentrysnoop/: Cargo.toml  build.rs
examples/08-fentry-unlink/fentrysnoop-common/: Cargo.toml
examples/08-fentry-unlink/fentrysnoop-common/src/: lib.rs
examples/08-fentry-unlink/fentrysnoop-ebpf/: Cargo.toml
examples/08-fentry-unlink/fentrysnoop-ebpf/src/: main.rs
examples/08-fentry-unlink/fentrysnoop/src/: main.rs
examples/09-opensnoop/: Cargo.toml  README.md  demo.sh
examples/09-opensnoop/opensnoop-ebpf/: Cargo.toml
examples/09-opensnoop/opensnoop-ebpf/src/: main.rs
examples/10-sigsnoop/: Cargo.toml  README.md  demo.sh
examples/11-execsnoop/: Cargo.toml  README.md  demo.sh
examples/12-exitsnoop/: Cargo.toml  README.md  demo.sh
examples/12-exitsnoop/exitsnoop-ebpf/: Cargo.toml
examples/12-exitsnoop/exitsnoop-ebpf/src/: main.rs
examples/13-bashreadline/: Cargo.toml  README.md  demo.sh
examples/14-uprobe-rust/: Cargo.toml  README.md  demo.sh
examples/15-btf-uprobe/: Cargo.toml  README.md  demo.sh
examples/15-btf-uprobe/btf-uprobe/: Cargo.toml  build.rs
examples/15-btf-uprobe/btf-uprobe-common/: Cargo.toml
examples/15-btf-uprobe/btf-uprobe-common/src/: lib.rs
examples/15-btf-uprobe/btf-uprobe-ebpf/: Cargo.toml
examples/15-btf-uprobe/btf-uprobe-ebpf/src/: main.rs
examples/15-btf-uprobe/btf-uprobe/src/: main.rs
examples/15-btf-uprobe/target-app/: Cargo.toml
examples/15-btf-uprobe/target-app/src/: main.rs
examples/16-container-targets/: Cargo.toml  README.md  compose.yaml  (+1 more)
examples/18-funclatency/funclatency/: Cargo.toml  build.rs
examples/18-funclatency/funclatency-ebpf/: Cargo.toml
examples/18-funclatency/funclatency-ebpf/src/: main.rs
examples/18-funclatency/funclatency/src/: main.rs
examples/19-goroutine-states/goroutine-ebpf/: Cargo.toml
examples/19-goroutine-states/goroutine-ebpf/src/: main.rs
examples/31-tc-classify/tc-classify-ebpf/: Cargo.toml
examples/31-tc-classify/tc-classify-ebpf/src/: main.rs
examples/33-xdp-capture/xdp-capture-ebpf/: Cargo.toml
examples/33-xdp-capture/xdp-capture-ebpf/src/: main.rs
examples/34-xdp-lb/xdp-lb/: Cargo.toml  build.rs
examples/34-xdp-lb/xdp-lb/src/: main.rs
examples/46-three-signals/httpwatch/: Cargo.toml  build.rs
examples/46-three-signals/httpwatch/src/: main.rs
examples/61-power/power/: Cargo.toml  build.rs
examples/61-power/power/src/: main.rs
examples/68-he-observability/he-workload/: Cargo.toml
examples/68-he-observability/he-workload/src/: main.rs
onboarding/: GETTING-STARTED.md  LESSONS-LEARNED.md  README.md  STARTING-WITH-CLAUDE.md
presentation/: .gitignore  build_diagrams.py  deck-101.js  deck-201.js  deck-helpers.js  dgen.py  diagrams.py  ebpf-aya-101-r01.0.pptx  ebpf-aya-101-r01.1.pptx  ebpf-aya-201-r01.0.pptx  ebpf-aya-201-r01.1.pptx
scripts/: README.md  test-all-examples.sh
(+541 files in other folders)
