# Cargo workspace for the hello-world Aya project.
#
# Three crates:
#   hello-common  — #[repr(C)] types shared by both halves (no_std)
#   hello-ebpf    — the in-kernel BPF program (no_std, BPF target)
#   hello         — the user-space loader + OTLP reporter
#
# The hello crate's build.rs uses `aya-build` to compile hello-ebpf for the
# BPF target and embed the object, so a plain `cargo build` produces one
# self-contained user-space binary. (This is the current aya-template shape;
# older templates used an `xtask` instead — see the Aya Book if your generated
# project differs.)
[workspace]
resolver = "2"
# hello-ebpf must be a workspace member so aya-build can `cargo build --package
# hello-ebpf` for the BPF target, but it's kept out of default-members so a plain
# `cargo build` builds only the host loader (whose build.rs cross-compiles it).
members = ["hello", "hello-common", "hello-ebpf"]
default-members = ["hello", "hello-common"]

[workspace.package]
license = "Apache-2.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
