[workspace]
resolver = "2"
members = ["btf-uprobe", "btf-uprobe-common", "target-app", "btf-uprobe-ebpf"]
default-members = ["btf-uprobe", "btf-uprobe-common", "target-app"]
[workspace.package]
license = "Apache-2.0"
edition = "2021"
[profile.release]
lto = true
codegen-units = 1
# Keep debug info so the target binary carries type info (DWARF), which
# `pahole -J` can convert to BTF — the whole point of this chapter.
debug = true
