[package]
name = "hello"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
aya = "0.13"
aya-log = "0.2"
hello-common = { path = "../hello-common", features = ["user"] }

anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
env_logger = "0.11"
log = "0.4"

# OpenTelemetry export (metrics) to the otel-lgtm stack via OTLP/HTTP.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "metrics"] }

[build-dependencies]
# Compiles ../hello-ebpf for the BPF target and exposes the object via OUT_DIR.
aya-build = "0.1"
