[package]
name = "unlinksnoop-ebpf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
unlinksnoop-common = { path = "../unlinksnoop-common" }

[[bin]]
name = "unlinksnoop"
path = "src/main.rs"

[profile.dev]
opt-level = 3
[profile.release]
lto = true
