[package]
name = "opensnoop-ebpf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
[dependencies]
aya-ebpf = "0.2"
aya-log-ebpf = "0.2"
opensnoop-common = { path = "../opensnoop-common" }
[[bin]]
name = "opensnoop"
path = "src/main.rs"
[profile.dev]
opt-level = 3
[profile.release]
lto = true
