[package]
name = "exitsnoop-ebpf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
exitsnoop-common = { path = "../exitsnoop-common" }
[[bin]]
name = "exitsnoop"
path = "src/main.rs"
[profile.dev]
opt-level = 3
[profile.release]
lto = true
