[package]
name = "tc-classify-ebpf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
[dependencies]
aya-ebpf = "0.2"
network-types = "0.0.7"
tc-classify-common = { path = "../tc-classify-common" }
[[bin]]
name = "tc-classify"
path = "src/main.rs"
[profile.dev]
opt-level = 3
[profile.release]
lto = true
