[package]
name = "xdp-capture-ebpf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
[dependencies]
aya-ebpf = "0.2"
network-types = "0.0.7"
xdp-capture-common = { path = "../xdp-capture-common" }
[[bin]]
name = "xdp-capture"
path = "src/main.rs"
[profile.dev]
opt-level = 3
[profile.release]
lto = true
